--- a/StudentEnrollment/StudentEnrollment/appsettings.json
+++ b/StudentEnrollment/StudentEnrollment/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
     "ConnectionStrings": {
-        //"SchoolContext": "Server=(localdb)\\MSSQLLocalDB;Database=SchoolContext;Trusted_Connection=True;MultipleActiveResultSets=true",
-        "SchoolContext": "Server=tcp:philw.database.windows.net,1433;Initial Catalog=StudentEnrollment;Persist Security Info=False;User ID=philrwerner;Password=ZuluEchoLima84;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+        "SchoolContext": "Server=(localdb)\\MSSQLLocalDB;Database=SchoolContext;Trusted_Connection=True;MultipleActiveResultSets=true",
+        //"SchoolContext": "Server=tcp:philw.database.windows.net,1433;Initial Catalog=StudentEnrollment;Persist Security Info=False;User ID=philrwerner;Password=ZuluEchoLima84;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
     }
 }
